tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@multiple_extends.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/multiple_extends.txt
---
error: Template is already extending `a`
 --> multiple_extends.txt:2:12
  |
2 | {% extends "b" %}
  |            ^^^
